--- a/ProductInventorySystem/src/main/resources/templates/login.html
+++ b/ProductInventorySystem/src/main/resources/templates/login.html
@@ -23,8 +23,7 @@
         <button type="submit">Login</button>
     </form>
     <p>
-        Don't have an account? <a th:href="@{/register}">Register</a>  <!-- 新規アカウント作成ページへのリンクを追加 -->
+        Don't have an account? <a th:href="@{/register}">Register</a>
     </p>
 </body>
 </html>
-
