--- a/ProductInventorySystem/src/main/resources/templates/dashboard.html
+++ b/ProductInventorySystem/src/main/resources/templates/dashboard.html
@@ -1,4 +1,3 @@
-<!-- dashboard.html -->
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -10,6 +9,7 @@
     <a th:href="@{/dashboard/{storeId}(storeId=${storeId})}">店舗管理</a>
     <a th:href="@{/profile}">管理者プロフィール</a>
     <a th:href="@{/admin-management}">管理者管理</a>
+    <a th:href="@{/category-management}">カテゴリ管理</a>
     <form th:action="@{/logout}" method="post">
         <button type="submit">ログアウト</button>
     </form>
