商品詳細画面カテゴリ修正、サービスをインターフェイスと実装分け、管理者編集修正、プロフィール編集修正、アカウント新規登録修正実施

--- a/ProductInventorySystem/src/main/resources/templates/product-details.html
+++ b/ProductInventorySystem/src/main/resources/templates/product-details.html
@@ -33,6 +33,14 @@
         <label>大カテゴリ名:</label>
         <span th:text="${largeCategoryName}"></span>
     </div>
+    <div>
+        <label>中カテゴリ名:</label>
+        <span th:text="${subcategoryName}"></span>
+    </div>
+    <div>
+        <label>小カテゴリ名:</label>
+        <span th:text="${smallCategoryName}"></span>
+    </div>
     <a th:href="@{/products}">戻る</a>
 </body>
 </html>
